# rap3df-database

./: .gitignore  CMakeLists.txt  README.md  actions.cpp  actions.h  camera.cpp  camera.h  context.cpp  context.h  cpp_pc_view.cpp  freenectdevice.cpp  freenectdevice.h  libfreenect.hpp  main.cpp  main_viewer.cpp  utils.cpp  utils.h  vec3.h  viewport.cpp  viewport.h
imgs/: rap3df_02_example.xcf
rap3df_data/: database.csv
rap3df_data/0SZZJUV/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/1F6XI0Y/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/1NDPQ4Y/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/26WIOSN/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/2S1OM9A/: k1_box_xy_depth.data  k1_box_xyz_ir.data
rap3df_data/2XUNTVA/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/3GXDQET/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/3OF2MLZ/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/53YB3E4/: k1_box_xy_depth.data  k1_box_xyz_ir.data
rap3df_data/5HNLC4F/: k1_box_xy_depth.data  k1_box_xyz_ir.data
rap3df_data/6BPKZTY/: k1_box_xy_depth.data  k1_box_xyz_ir.data
rap3df_data/6D12X8T/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/9L29SWS/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/9YCY6MM/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/A5RG8JQ/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/AZP2RWJ/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/BGVDDNB/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/BLISIVP/: k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/BOQW7WK/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/BT9EEAF/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/BXF8187/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/C08T4TU/: k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/C5JDZ6Z/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/DCFZ1ST/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/DVWJD71/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/E75RBPR/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/F0VYRPY/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/FB4ROYZ/: k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/FBJD796/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/FSR3KAP/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/GEU92TC/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/HBC3OYK/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/I6Y91LI/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/ID736DM/: k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/II25TSA/: k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/IL12CKO/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/IV6ZMY4/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/J3KPJ0N/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/JLIW41O/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/JO8E4N8/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/KFCDU4R/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/KNP1A4H/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/KPMCARJ/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/LPLFEXG/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/LVF89V2/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/M40IF31/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/MBK6SKH/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/MOAG13V/: k1_box_xy_depth.data  k1_box_xyz_ir.data
rap3df_data/MU8HR8X/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/NHWHB1Q/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/NZ66AOT/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/ODWWXBA/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/ORM23WA/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/OYPM3Z3/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/P2I0ULH/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/RDOYV62/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/RVWU3VV/: k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/SGZPAFE/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/TPWW74Y/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/V46VWUN/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/V7A1BPX/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/VCKLSSO/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/W78T3SZ/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/WB52QUL/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/YC8U79G/: k1_box_xy_depth.data  k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/YY0GT8J/: k1_box_xyz_depth.data  k1_box_xyz_ir.data
rap3df_data/ZM2SZ37/: k1_box_xy_depth.data  k1_box_xyz_ir.data
rap3df_data_02/: database.json
(+1326 files in other folders)
